# krown-blockchain

./: CODEOWNERS  LICENSE  README.md  rust-toolchain.toml  shell.nix
node/: Cargo.toml
node/src/: benchmarking.rs  chain_spec.rs  command.rs  rpc.rs  service.rs
pallets/template/src/: weights.rs
primitives/: Cargo.toml
runtime/: Cargo.toml
runtime/src/: constants.rs  lib.rs
scripts/: init.sh
