[package]
name = "node-primitives"
version = "4.0.0-dev"
authors = ["#amazing <https://github.com/hashtagamazing>"]
edition = "2021"
license = "Proprietary"
publish = false
homepage = "https://thekrown.org/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = ["derive"] }

sp-core = { version = "21.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sp-runtime = { version = "24.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }

[features]
default = ["std"]
std = [
	"codec/std",
	"sp-core/std",
	"sp-runtime/std",
]
